--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=auth_service
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -26,6 +26,13 @@ DB_PORT=3306
 DB_DATABASE=auth_service
 DB_USERNAME=db_user
 DB_PASSWORD=secret
+
+JWT_SECRET=your_super_secret_key_here
+JWT_TTL=3600   # token expiry in seconds (e.g., 1 hour)
+JWT_ALGORITHM=HS256
+JWT_ISSUER=your_app_name
+JWT_AUDIENCE=your_app_audience
+JWT_SUBJECT=your_app_subject
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
